--- a/public/m/index.html
+++ b/public/m/index.html
@@ -15,16 +15,16 @@
 </head>
 
 <body>
-<header class="topbar">
-    <span>乐淘云购</span>
-    <a href="" class="fa fa-search"></a>
-</header>
+    <header class="topbar">
+        <span>乐淘云购</span>
+        <a href="" class="fa fa-search"></a>
+    </header>
 
     <div class="mui-scroll-wrapper">
         <div class="mui-scroll">
             <!--这里放置真实显示的DOM内容-->
-           
-<div class="main">
+
+            <div class="main">
                 <!-- 轮播 -->
                 <section id="slide">
                     <div class="mui-slider">
@@ -301,26 +301,26 @@
                     </div>
                 </section>
                 <!-- 底部 -->
-               
+
             </div>
         </div>
     </div>
-<footer id="footer">
-    <div class="mui-row">
-        <a href="#" class="fa fa-home mui-col-xs-3">
-            <span>首页</span>
-        </a>
-        <a href="#" class="fa fa-bars mui-col-xs-3">
-            <span>分类</span>
-        </a>
-        <a href="#" class="fa fa-shopping-cart mui-col-xs-3">
-            <span>购物车</span>
-        </a>
-        <a href="#" class="fa fa-user mui-col-xs-3">
-            <span>会员中心</span>
-        </a>
-    </div>
-</footer>
+    <footer id="footer">
+        <div class="mui-row">
+            <a href="./index.html" class="fa fa-home mui-col-xs-3">
+                <span>首页</span>
+            </a>
+            <a href="./category.html" class="fa fa-bars mui-col-xs-3">
+                <span>分类</span>
+            </a>
+            <a href="#" class="fa fa-shopping-cart mui-col-xs-3">
+                <span>购物车</span>
+            </a>
+            <a href="#" class="fa fa-user mui-col-xs-3">
+                <span>会员中心</span>
+            </a>
+        </div>
+    </footer>
     <!-- 顶部 -->
 
     <!-- 引入的js -->
