--- a/public/m/category.html
+++ b/public/m/category.html
@@ -17,7 +17,7 @@
 <body>
     <header class="topbar">
         <span>乐淘云购</span>
-        <a href="" class="fa fa-search"></a>
+        <a href="./search.html" class="fa fa-search"></a>
     </header>
     <!-- main主体 -->
     <div class="main">
@@ -57,7 +57,7 @@
             <a href="./index.html" class="fa fa-home mui-col-xs-3">
                 <span>首页</span>
             </a>
-            <a href="#" class="fa fa-bars mui-col-xs-3">
+            <a href="#" class="fa fa-bars mui-col-xs-3 active">
                 <span>分类</span>
             </a>
             <a href="./category.html" class="fa fa-shopping-cart mui-col-xs-3">
