--- a/public/m/index.html
+++ b/public/m/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="topbar">
         <span>乐淘云购</span>
-        <a href="" class="fa fa-search"></a>
+        <a href="./search.html" class="fa fa-search"></a>
     </header>
 
     <div class="mui-scroll-wrapper">
@@ -170,7 +170,7 @@
                     <div class="title">
                         <img src="./images/title1.png" alt="">
                     </div>
-                    <div class="mui-row">
+                    <div class="mui-row pro">
                         <a href="#" class="mui-col-xs-6">
                             <img src="./images/product.jpg" alt="">
                             <p>adidas阿迪达斯 男式 场下休闲篮球鞋S83700 </p>
@@ -215,7 +215,7 @@
                     <div class="title">
                         <img src="./images/title2.png" alt="">
                     </div>
-                    <div class="mui-row">
+                    <div class="mui-row pro">
                         <a href="#" class="mui-col-xs-6">
                             <img src="./images/product.jpg" alt="">
                             <p>adidas阿迪达斯 男式 场下休闲篮球鞋S83700 </p>
@@ -260,7 +260,7 @@
                     <div class="title">
                         <img src="./images/title3.png" alt="">
                     </div>
-                    <div class="mui-row">
+                    <div class="mui-row pro">
                         <a href="#" class="mui-col-xs-6">
                             <img src="./images/product.jpg" alt="">
                             <p>adidas阿迪达斯 男式 场下休闲篮球鞋S83700 </p>
@@ -307,7 +307,7 @@
     </div>
     <footer id="footer">
         <div class="mui-row">
-            <a href="./index.html" class="fa fa-home mui-col-xs-3">
+            <a href="./index.html" class="fa fa-home mui-col-xs-3 active">
                 <span>首页</span>
             </a>
             <a href="./category.html" class="fa fa-bars mui-col-xs-3">
