--- a/public/m/productBuy.html
+++ b/public/m/productBuy.html
@@ -35,7 +35,7 @@
     <footer class="buy">
         <a href="#" class="btn_cart fa fa-shopping-cart"></a> 
         <div>
-            <a href="#" class="mui-btn mui-btn-danger" add-car>加入购物车</a>
+            <a href="#" class="mui-btn mui-btn-danger btn-car" add-car>加入购物车</a>
             <a href="#" class="mui-btn mui-btn-warning btn-buy">立即购买</a>
         </div>
     </footer>
