--- a/public/m/login.html
+++ b/public/m/login.html
@@ -33,7 +33,7 @@
             </div>
             <div class="mui-button-row">
                 <button type="button" class="mui-btn mui-btn-primary login">确认</button>
-                <a href="./register.html" type="button" class="mui-btn mui-btn-danger">立即注册</a>
+                <a href="./register.html" type="button" class="mui-btn mui-btn-danger btn-register">立即注册</a>
             </div>
         </form>
     </div>
